src/objects/Contact_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>R00N700000020Qy3EAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FirstOfPair__c</fullName>
        <description>evaluates to &quot;True&quot; for the record in a pair of mirror relationsihps that was created first - arbitrary, but allows us to dedup relationship lists in reports</description>
        <formula>IF (  VALUE(RIGHT(Name,5)) &lt;  VALUE(RIGHT(Mirror_Relationship__r.Name,5)) , &quot;True&quot; , &quot;False&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is First Relationship Pair</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mirror_Relationship__c</fullName>
        <label>Mirror Relationship</label>
        <referenceTo>Contact_Relationship__c</referenceTo>
        <relationshipLabel>Mirror Relationships</relationshipLabel>
        <relationshipName>R00NR0000000UgQmMAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Relationship__c</fullName>
        <description>How this contact is related back to the &quot;Related Contact.&quot;
Apex code creates a corresponding relationship if this is filled in.</description>
        <inlineHelpText>How this contact is related back to the &quot;Related Contact&quot; (e.g. for Attorney, choose Client). If you don&apos;t specify a reciprocal relationship, the related contact won&apos;t have a relationship in its list.</inlineHelpText>
        <label>Reciprocal Relationship</label>
        <picklist>
            <controllingField>Relationship__c</controllingField>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reciprocal Relationships</relationshipLabel>
        <relationshipName>R00N700000020Qy7EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Status__c</fullName>
        <formula>IF( AND(NULLVALUE(From_Date__c, TODAY() ) &lt;= TODAY() ,NULLVALUE(To_Date__c, TODAY() ) &gt;= TODAY() ) , &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of this relationship: active or inactive</inlineHelpText>
        <label>Relationship Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>How the &quot;Related Contact&quot; is related to this contact.</description>
        <inlineHelpText>How the &quot;Related Contact&quot; is related to this contact.</inlineHelpText>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>Unique name for the person who is the &quot;source&quot; of the relationship, so user can filter in the report All Contact Relationships and add all this person&apos;s relationships to a campaign.</description>
        <formula>Mirror_Relationship__r.Contact__r.FirstName &amp; &apos; &apos; &amp; Mirror_Relationship__r.Contact__r.LastName &amp; &apos; (&apos; &amp; Mirror_Relationship__r.Contact__r.Id &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UniqueRelCode__c</fullName>
        <description>Unique and human-readable relationship name for each relationship pair, enabling user to filter groups of relationships in All Contact Relationships report for Add to Campaign</description>
        <formula>IF ( VALUE(RIGHT(Name,5)) &lt; VALUE(RIGHT(Mirror_Relationship__r.Name,5)) , Contact__r.LastName, Mirror_Relationship__r.Contact__r.LastName ) &amp;
IF ( VALUE(RIGHT(Name,5)) &gt; VALUE(RIGHT(Mirror_Relationship__r.Name,5)) , Contact__r.LastName, Mirror_Relationship__r.Contact__r.LastName ) &amp;
IF ( VALUE(RIGHT(Name,5)) &lt; VALUE(RIGHT(Mirror_Relationship__r.Name,5)) , Name, Mirror_Relationship__r.Name ) &amp;
IF ( VALUE(RIGHT(Name,5)) &gt; VALUE(RIGHT(Mirror_Relationship__r.Name,5)) , Name, Mirror_Relationship__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueRelCode</label>
        <type>Text</type>
    </fields>
    <label>Contact Relationship</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Related_Contact_Not_Updatable</fullName>
        <active>true</active>
        <description>don&apos;t let someone change the relationship contacts after it has been created</description>
        <errorConditionFormula>and(not( ISNEW()), ISCHANGED(Related_Contact__c ))</errorConditionFormula>
        <errorDisplayField>Related_Contact__c</errorDisplayField>
        <errorMessage>If you want to change the Contact in this relationship, delete the relationship and recreate it with the new Contacts</errorMessage>
    </validationRules>
</CustomObject>